--- a/note.ipynb
+++ b/note.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import numpy as np\n",
     "import torch.nn.functional as F\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,23 +62,24 @@
      "output_type": "stream",
      "text": [
       "                                                 review  rating\n",
-      "0     Архимаг ищет невесту\\nМного читала академок, р...       1\n",
-      "1     Манюня\\nВсё, что нужно знать об уровне юмора э...       1\n",
-      "2     Удивительный Александр и крылатые кошки\\nПочем...       1\n",
-      "3     Бездушный принц\\nЗахотелось прочитать какую-ни...       1\n",
-      "4     Душа осьминога. Тайны сознания удивительного с...       1\n",
+      "0     Архимаг ищет невесту\\nМного читала академок, р...       0\n",
+      "1     Манюня\\nВсё, что нужно знать об уровне юмора э...       0\n",
+      "2     Удивительный Александр и крылатые кошки\\nПочем...       0\n",
+      "3     Бездушный принц\\nЗахотелось прочитать какую-ни...       0\n",
+      "4     Душа осьминога. Тайны сознания удивительного с...       0\n",
       "...                                                 ...     ...\n",
-      "5000  Спаси меня от холода ночи\\nЖизнь деревни Каслд...       5\n",
-      "5001  Витаминка\\nКаково это быть купидоном? Это волш...       5\n",
-      "5002  Цветок в мужской академии магии\\nХотела бы рас...       5\n",
-      "5003  Господин Неудача\\nПосле загадочной гибели роди...       5\n",
-      "5004  Кай\\n\"Прежде чем войти куда-то, убедись, что т...       5\n",
+      "5000  Спаси меня от холода ночи\\nЖизнь деревни Каслд...       4\n",
+      "5001  Витаминка\\nКаково это быть купидоном? Это волш...       4\n",
+      "5002  Цветок в мужской академии магии\\nХотела бы рас...       4\n",
+      "5003  Господин Неудача\\nПосле загадочной гибели роди...       4\n",
+      "5004  Кай\\n\"Прежде чем войти куда-то, убедись, что т...       4\n",
       "\n",
       "[5005 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
+    "df['rating'] = df['rating'].replace({1: 0, 2: 1, 3: 2, 4: 3, 5: 4})\n",
     "print(df)"
    ]
   },
@@ -142,21 +144,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5005, 46381)\n"
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
      ]
     }
    ],
    "source": [
-    "vectorizer = CountVectorizer(stop_words=stopwords_ru)\n",
+    "max_words = 10000\n",
+    "vectorizer = CountVectorizer(max_features=max_words, stop_words=stopwords_ru)\n",
     "sparse_matrix = vectorizer.fit_transform(df['review']).toarray()\n",
-    "print(sparse_matrix.shape)"
+    "print(sparse_matrix)"
    ]
   },
   {
@@ -175,7 +184,7 @@
     }
    ],
    "source": [
-    "train, test_valid = train_test_split(sparse_matrix, test_size=0.2)\n",
+    "train, test_valid = train_test_split(sparse_matrix, np.array(df['rating']) test_size=0.2)\n",
     "test, valid = train_test_split(test_valid, test_size=0.5)\n",
     "\n",
     "print(train.shape)\n",
@@ -192,9 +201,9 @@
     "class LogisticRegression(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(LogisticRegression, self).__init__()\n",
-    "        self.linear1 = nn.Linear(46381, 100)\n",
+    "        self.linear1 = nn.Linear(10000, 100)\n",
     "        self.linear2 = nn.Linear(100, 10)\n",
-    "        self.linear3 = nn.Linear(10, 5)\n",
+    "        self.linear3 = nn.Linear(10, 5) #soft max [0.1, 0.2, 0.2, 0.4, 0.1]\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.linear1(x))\n",
